k8s/marketplace/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: different
spec:
  containers:
  - name: marketplace
    image: nginx:1.25.4
