k8s/marketplace/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-svc
spec:
  selector:
    app: marketplace
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: https
