k8s/marketplace/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABIJDEFHZ
      SecAuditLog /var/log/modsec_audit.log
      SecRule REQUEST_HEADERS:User-Agent "@contains fern-scanner" "id:1000001,deny,status:403"
spec:
  tls:
  - hosts:
    - marketplace.com
    secretName: marketplace-tls
  ingressClassName: nginx
  rules:
  - host: marketplace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marketplace-svc
            port:
              number: 8000
